# zkasper

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  zisk-proofs.yml
crates/bootstrap-guest/: Cargo.toml
crates/bootstrap-guest/src/: lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: bls.rs  lib.rs  merkle.rs  op_counter.rs  poseidon.rs  recursion.rs  ssz.rs  test_utils.rs  types.rs
crates/epoch-diff-guest/: Cargo.toml
crates/epoch-diff-guest/src/: lib.rs  main.rs
crates/finality-guest/: Cargo.toml
crates/finality-guest/src/: lib.rs  main.rs
crates/finalization-guest/: Cargo.toml
crates/finalization-guest/src/: lib.rs  main.rs
crates/justification-guest/: Cargo.toml
crates/justification-guest/src/: lib.rs  main.rs
crates/onchain-verifier/src/: ZkasperVerifier.sol
crates/onchain-verifier/test/: ZkasperVerifier.t.sol
crates/slot-proof-guest/: Cargo.toml
crates/slot-proof-guest/src/: lib.rs  main.rs
crates/witness-gen/: Cargo.toml
crates/witness-gen/src/: attestation_collector.rs  beacon_api.rs  db.rs  epoch_state.rs  lib.rs  main.rs  poseidon_tree.rs  ssz_state.rs  state_diff.rs  witness_bootstrap.rs  witness_epoch_diff.rs  witness_finality.rs  witness_justification.rs  witness_slot_proof.rs
crates/witness-gen/tests/: e2e_test.rs  integration_tests.rs  real_beacon_tests.rs  ssz_file_tests.rs
crates/witness-gen/tests/common/: mod.rs
scripts/: test_zisk_proof.sh
