[package]
name = "zkasper-bootstrap-guest"
version.workspace = true
edition.workspace = true

[dependencies]
zkasper-common = { path = "../common", default-features = false }
serde = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
light-poseidon = { workspace = true }
# ziskos = { workspace = true }
