[package]
name = "zkasper-epoch-diff-guest"
version.workspace = true
edition.workspace = true

[lib]
name = "zkasper_epoch_diff_guest"
path = "src/lib.rs"

[[bin]]
name = "zkasper-epoch-diff-guest"
path = "src/main.rs"

[dependencies]
zkasper-common = { path = "../common", default-features = false }
serde = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
light-poseidon = { workspace = true }
# ziskos = { workspace = true }

[dev-dependencies]
zkasper-common = { path = "../common", features = ["test-utils"] }
