[package]
name = "zkasper-finalization-guest"
version.workspace = true
edition.workspace = true

[lib]
name = "zkasper_finalization_guest"
path = "src/lib.rs"

[[bin]]
name = "zkasper-finalization-guest"
path = "src/main.rs"

[features]
default = []

[dependencies]
zkasper-common = { path = "../common", default-features = false }
serde = { workspace = true }
bincode = { workspace = true }
ziskos = { workspace = true }
