[package]
name = "zkasper-justification-guest"
version.workspace = true
edition.workspace = true

[lib]
name = "zkasper_justification_guest"
path = "src/lib.rs"

[[bin]]
name = "zkasper-justification-guest"
path = "src/main.rs"

[features]
default = []

[dependencies]
zkasper-common = { path = "../common", default-features = false }
serde = { workspace = true }
bincode = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
light-poseidon = { workspace = true }
ziskos = { workspace = true }
