[package]
name = "zkasper-witness-gen"
version.workspace = true
edition.workspace = true

[lib]
name = "zkasper_witness_gen"
path = "src/lib.rs"

[[bin]]
name = "zkasper-witness-gen"
path = "src/main.rs"

[[bin]]
name = "gen-test-witness"
path = "src/bin/gen_test_witness.rs"

[dependencies]
zkasper-common = { path = "../common", features = ["test-utils"] }
serde = { workspace = true, features = ["std"] }
serde_json = "1"
bincode = { workspace = true }
sha2 = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
light-poseidon = { workspace = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
rayon = "1"
hex = "0.4"
async-trait = "0.1"
blst = { workspace = true }

[features]
default = []
count-ops = ["zkasper-common/count-ops"]
bls = ["zkasper-common/bls"]

[dev-dependencies]
zkasper-bootstrap-guest = { path = "../bootstrap-guest", features = ["count-ops"] }
zkasper-epoch-diff-guest = { path = "../epoch-diff-guest", features = ["count-ops"] }
zkasper-finality-guest = { path = "../finality-guest", features = ["bls"] }
zkasper-slot-proof-guest = { path = "../slot-proof-guest", features = ["bls"] }
zkasper-justification-guest = { path = "../justification-guest" }
zkasper-finalization-guest = { path = "../finalization-guest" }
zkasper-common = { path = "../common", features = ["test-utils", "count-ops", "bls"] }
blst = { workspace = true }
tempfile = "3"
flate2 = "1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
